# owl

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  iceoryx2_cofig.toml  test.txt
core/: CMakeLists.txt
core/infrastructure/: concepts.hpp  event.hpp  measure.hpp  notification.hpp  result.hpp
core/memory.hpp/: new.hpp
core/pipeline/: pipeline.hpp  pipeline_handler.hpp
core/utils/: error.hpp  success.hpp
domain/: CMakeLists.txt  application.hpp  application_fs_parse.cpp  application_initialize.hpp  application_run.cpp  container_manager.cpp  container_manager.hpp  knowledge_container.hpp  markov.hpp  ossec_container_adapter.hpp  search_manager.hpp  simple_http_server.hpp  state.hpp  storage.hpp  vector_faiss_logic.hpp  vectorfs.hpp  vectorfs_fuse_cmd.cpp  vectorfs_ipc.hpp  vectorfs_results.cpp  vectorfs_semantic.cpp  vectorfs_state.hpp  vectorfs_subscriber.cpp  vectorfs_test.cpp
domain/algorithms/: diskann.hpp  trim.hpp
domain/algorithms/compression/: compression.hpp  compression_base.hpp
domain/algorithms/compressor/: compressor.hpp  compressor_base.hpp  compressor_manager.hpp
domain/api/: api.hpp  bodies.hpp  publisher.hpp  requests.hpp  responses.hpp  subscriber.hpp  validate.hpp
domain/basement/: basement.hpp
domain/embedded/: embedded_base.hpp  embedded_fasttext.hpp  embedded_utils.hpp  emdedded_manager.hpp
domain/env/: cppenv.hpp  env_manager.hpp  env_manager_impl.hpp
domain/file/: fileinfo.hpp
domain/instance/: instance.hpp
domain/ipc/: ipc.hpp  ipc_base.hpp  ipc_handler_base.hpp  ipc_pipeline_handler.hpp
domain/network/: api.hpp  capnproto.hpp  handlers.hpp
domain/network/schemas/: vectorfs.capnp
domain/operations/: container.hpp  file.hpp  knowledge_container.hpp  owner.hpp  search.hpp
domain/parsers/: parser_base.hpp  parser_pdf.hpp  parser_utils.hpp
domain/pipeline/: pipeline.hpp  pipeline_handler.hpp
domain/schemas/: fileinfo.hpp
domain/shared_memory/: shared_memory.hpp
domain/utils/: constants.hpp  http_helpers.hpp  quantization.hpp  shared_types.hpp
domain/vector_file_system/controllers/: handler.hpp  read.hpp
domain/vfs/: domain.hpp
domain/vfs/core/: handlers.hpp  loop.hpp
domain/vfs/core/container/: container_base.hpp  container_manager.hpp  container_states.hpp  ossec_container.hpp
domain/vfs/core/container/base/: file_system_container.hpp  identifiable_container.hpp  resource_manager_container.hpp  search_container.hpp  stateful_container.hpp
domain/vfs/core/container/mixins/: ossec_fs.hpp  ossec_fs_helpers.hpp  ossec_resource.hpp  ossec_search.hpp  ossec_state.hpp
domain/vfs/core/fsm/: states.hpp
domain/vfs/core/loop/: loop.hpp  loop_base.hpp  runner.hpp  simple_separate_thread.hpp  thread.hpp
domain/vfs/core/operators/get/: container_files.hpp
domain/vfs/core/schemas/: events.hpp  filesystem_schemas.hpp  schemas.hpp
domain/vfs/core/socket/: socket.hpp
domain/vfs/fs/: observer.hpp
domain/vfs/fs/handlers/: create.hpp  getattr.hpp  getxattr.hpp  handler.hpp  listxattr.hpp  mkdir.hpp  open.hpp  read.hpp  readdir.hpp  rmdir.hpp  setxattr.hpp  unlink.hpp  utimens.hpp  write.hpp
domain/vfs/fs/operators/: create.hpp  event_handlers.hpp
domain/vfs/fs/processor/: processor_base.hpp  utils.hpp
domain/vfs/fs/protocol/: protocol.h
domain/vfs/mq/: controller.hpp  dispatcher.hpp  mapper.hpp  mq_loop.hpp  observer.hpp  routing.hpp  validator.hpp  zeromq_loop.hpp
domain/vfs/mq/controllers/: container.hpp  container_create.hpp  container_delete.hpp  container_get_files.hpp  container_stop.hpp  controllers.hpp  file.hpp  file_create.hpp  file_delete.hpp  get_container_files.hpp  semantic_search.hpp
domain/vfs/mq/core/: dispatcher.hpp  routing.hpp
domain/vfs/mq/filters/: by.hpp
domain/vfs/mq/operators/: container_stop.hpp  create_container.hpp  delete.hpp  delete_container.hpp  event_handlers.hpp  file_create.hpp  file_delete.hpp  get.hpp  get_container_files.hpp  post.hpp  put.hpp
domain/vfs/mq/operators/get/: container_files.hpp
domain/vfs/mq/operators/resolvers/: check_container.hpp  container_active.hpp  container_exists.hpp  container_ownership.hpp  resolver.hpp  resolvers.hpp
domain/vfs/mq/operators/resolvers/container/: active.hpp  exists.hpp  ownership.hpp
domain/vfs/mq/operators/resolvers/file/: exists.hpp
domain/vfs/mq/operators/resolvers/user/: exists.hpp
domain/vfs/mq/resolvers/: id.hpp
domain/vfs/mq/schemas/: events.hpp  schemas.hpp
domain/vfs/mq/validation/: validator.hpp
include/: vectorfs.hpp
include/algorithms/: trim.hpp
include/core/infrastructure/: concepts.hpp  event.hpp  notification.hpp  result.hpp
include/core/utils/: error.hpp  success.hpp
include/embedded/: embedded.hpp  embedded_fasttext.hpp
include/file/: fileinfo.hpp
include/instance/: instance.hpp
include/network/: api.hpp  handlers.hpp  network.hpp
include/network/controllers/: file_controller.hpp  search_controller.hpp
include/utils/: http_helpers.hpp
lib/: CMakeLists.txt
src/: main.cpp  test.cpp
